--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/drawer": "^6.1.4",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-date-picker": "^4.0.0",
     "react-router-native": "^5.2.1"
   },
   "devDependencies": {
