--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/drawer": "^6.1.4",
-    "react": "17.0.2",
-    "react-native": "0.65.1",
-    "react-native-date-picker": "^4.0.0",
-    "react-redux": "^7.2.5",
-    "react-router-native": "^5.2.1",
-    "express": "^4.14.0",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "express": "^4.14.0",
     "jsonwebtoken": "^8.5.1",
+    "react": "17.0.2",
+    "react-native": "^0.65.1",
+    "react-native-date-picker": "^4.0.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.7.2",
+    "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
@@ -31,22 +34,22 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.0",
-    "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2",
     "axios": "^0.21.4",
+    "babel-jest": "^26.6.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "eslint": "7.14.0",
     "express": "^4.14.0",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "metro-react-native-babel-preset": "^0.66.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "react-native-codegen": "^0.0.7",
     "react-redux": "^7.2.5",
+    "react-test-renderer": "17.0.2",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
