--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "cors": "^2.8.5",
     "express": "^4.14.0",
     "jsonwebtoken": "^8.5.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-native": "^0.65.1",
+    "react-native-big-calendar": "^2.1.1",
     "react-native-date-picker": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.2",
