--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start-": "JWT=shhh node server",
+    "start-server": "JWT=shhh node server/index.js",
     "seed": "node script/seed.js",
     "test": "jest",
     "lint": "eslint ."
