--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-picker/picker": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/native-stack": "^6.2.2",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
