--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-big-calendar": "^2.1.1",
     "react-native-date-picker": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^13.0.0",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
