--- a/package.json
+++ b/package.json
@@ -24,19 +24,22 @@
     "cors": "^2.8.5",
     "express": "^4.14.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-native": "^0.65.1",
     "react-native-big-calendar": "^2.1.1",
     "react-native-date-picker": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rrule": "^2.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
